--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # Deploy VitePress site to GitHub Pages
 
-name: Deploy
+name: Deploy to GitHub Pages
 
 on:
   # Trigger deployment on push to main branch
